// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TinCheck Validate Method Tests > Should report when tin is not formatted properly 1`] = `
{
  "data": {
    "didPerformTinCheck": false,
    "errorSummary": [
      "TIN must be numeric and 9 digits in length",
    ],
    "isTinCheckIssuesFound": true,
    "tinCheckItemBreakdown": [],
  },
  "detailedResponse": {
    "addressResult": {
      "addressCode": "0",
      "addressDetails": "No USPS Match found.",
    },
    "listmatchResult": {
      "ilResult": {
        "ilCode": "0",
        "ilCount": 0,
        "ilData": "",
        "ilDetails": "Illinois Gaming Board Exclusion List: Found 0 possible matches",
      },
      "listsmatchCode": 0,
      "listsmatchDetails": "No Lists Matches Found",
      "moResult": {
        "moCode": "0",
        "moCount": 0,
        "moData": "",
        "moDetails": "Missouri Gaming Commission Exclusion List: Found 0 possible matches",
      },
      "msResult": {
        "msCode": "0",
        "msCount": 0,
        "msData": "",
        "msDetails": "Mississippi Gaming Commission Exclusion List: Found 0 possible matches",
      },
      "njResult": {
        "njCode": "0",
        "njCount": 0,
        "njData": "",
        "njDetails": "New Jersey Casino Control Commission Exclusion List: Found 0 possible matches",
      },
      "nvResult": {
        "nvCode": "0",
        "nvCount": 0,
        "nvData": "",
        "nvDetails": "Nevada Gaming Control Board (GBC) Excluded Persons List: Found 0 possible matches",
      },
      "ofacResult": {
        "ofacCode": "0",
        "ofacCount": 0,
        "ofacData": "",
        "ofacDetails": "Department of Treasury, Office of Foreign Assets Control (OFAC SDN/PLC): Found 0 possible matches",
      },
      "results": {
        "result": [
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Department of Treasury, Office of Foreign Assets Control (OFAC SDN/PLC): Found 0 possible matches",
            "type": "OFAC",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Health &amp; Human Services (HHS), Office of the Inspector General (OIG), Excluded Individuals and Entities (LEIE): Found 0 possible matches",
            "type": "HHS",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Politically Exposed Persons. (foreign diplomats): Found 0 possible matches",
            "type": "PEP",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Department of Commerce (DOC), Denied Persons List (DPL): Found 0 possible matches",
            "type": "DPL",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "General Services Administration (GSA), Excluded Parties List System (EPLS): Found 0 possible matches",
            "type": "EPLS",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Designated Foreign Terrorist Organizations: Found 0 possible matches",
            "type": "DFTO",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Foreign Sanctions Evaders (FSE) List: Found 0 possible matches",
            "type": "FSE",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "IRS FATCA GIIN List: Found 0 possible matches",
            "type": "GIIN",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "EU Sanctions List: Found 0 possible matches",
            "type": "EUS",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Arms Export Control Act List: Found 0 possible matches",
            "type": "DTC",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Foreign Financial Institutions Subj. 561/CAPTA List: Found 0 possible matches",
            "type": "FFI",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "IRS Exempt Organizations List: Found 0 possible matches",
            "type": "IEO",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Iranian Sanctions Act List: Found 0 possible matches",
            "type": "ISA",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Sectoral Sanctions Identifications List: Found 0 possible matches",
            "type": "SSI",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Unverified List: Found 0 possible matches",
            "type": "UVL",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Entity List: Found 0 possible matches",
            "type": "EAR",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Palestinian Legislative Council List: Found 0 possible matches",
            "type": "PLC",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Ukraine-Russia Related Sanctions List: Found 0 possible matches",
            "type": "UKE",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Iran-Syria Nonproliferation Act: Found 0 possible matches",
            "type": "NPS",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "United Nations Consolidated: Found 0 possible matches",
            "type": "UNCON",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Consolidated Sanctions List: Found 0 possible matches",
            "type": "TCON",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Administrative Sanctions: Found 0 possible matches",
            "type": "CFTCSIRT",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Reparations Sanctions: Found 0 possible matches",
            "type": "CFTCSIRTR",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Wanted: Found 0 possible matches",
            "type": "INT",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Consolidated Regulations: Found 0 possible matches",
            "type": "JLAWSOR",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Special Economic Measures Act: Found 0 possible matches",
            "type": "SEMA",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Freezing Assets of Corrupt Foreign Officials Act: Found 0 possible matches",
            "type": "FACFOA",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Most Wanted Terrorists: Found 0 possible matches",
            "type": "FBIMWT",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "White Collar Crimes: Found 0 possible matches",
            "type": "FBIWCC",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Additional Violent Crimes: Found 0 possible matches",
            "type": "FBIAVC",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Crimes Against Children: Found 0 possible matches",
            "type": "FBICAC",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Cyber Crimes: Found 0 possible matches",
            "type": "FBICC",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Criminal Enterprise Investigations: Found 0 possible matches",
            "type": "FBICEI",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Domestic Terrorism: Found 0 possible matches",
            "type": "FBIDT",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Seeking Information: Found 0 possible matches",
            "type": "FBISI",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Seeking Terror Information: Found 0 possible matches",
            "type": "FBISTI",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Top Ten Fugitives: Found 0 possible matches",
            "type": "FBITMW",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Violent Crimes - Murders: Found 0 possible matches",
            "type": "FBIVCM",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Nevada Gaming Control Board (GBC) Excluded Persons List: Found 0 possible matches",
            "type": "NV",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Mississippi Gaming Commission Exclusion List: Found 0 possible matches",
            "type": "MS",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Illinois Gaming Board Exclusion List: Found 0 possible matches",
            "type": "IL",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Missouri Gaming Commission Exclusion List: Found 0 possible matches",
            "type": "MO",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "New Jersey Casino Control Commission Exclusion List: Found 0 possible matches",
            "type": "NJ",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Michigan Gaming Control Board Exclusion List: Found 0 possible matches",
            "type": "MI",
          },
        ],
      },
    },
    "requestDetails": "Request Completed",
    "requestId": 1,
    "requestStatus": 1,
    "status": {
      "callsRemaining": "71",
      "status": "OK",
    },
    "tinnameResult": {
      "dmfCode": "11",
      "dmfData": "",
      "dmfDetails": "TIN must be numeric and 9 digits in length",
      "einCode": "11",
      "einData": "",
      "einDetails": "TIN must be numeric and 9 digits in length",
      "giinCode": "-1",
      "giinData": "",
      "giinDetails": "No GIIN provided. GIIN lookup skipped.",
      "tinnameCode": 11,
      "tinnameDetails": "TIN must be numeric and 9 digits in length",
    },
  },
  "success": true,
}
`;

exports[`TinCheck Validate Method Tests > Should report when tin is not found 1`] = `
{
  "data": {
    "didPerformTinCheck": false,
    "errorSummary": [
      "Invalid TIN Matching request",
    ],
    "isTinCheckIssuesFound": true,
    "tinCheckItemBreakdown": [],
  },
  "detailedResponse": {
    "addressResult": {
      "addressCode": "0",
      "addressDetails": "No USPS Match found.",
    },
    "listmatchResult": {
      "ilResult": {
        "ilCode": "0",
        "ilCount": 0,
        "ilData": "",
        "ilDetails": "Illinois Gaming Board Exclusion List: Found 0 possible matches",
      },
      "listsmatchCode": 0,
      "listsmatchDetails": "No Lists Matches Found",
      "moResult": {
        "moCode": "0",
        "moCount": 0,
        "moData": "",
        "moDetails": "Missouri Gaming Commission Exclusion List: Found 0 possible matches",
      },
      "msResult": {
        "msCode": "0",
        "msCount": 0,
        "msData": "",
        "msDetails": "Mississippi Gaming Commission Exclusion List: Found 0 possible matches",
      },
      "njResult": {
        "njCode": "0",
        "njCount": 0,
        "njData": "",
        "njDetails": "New Jersey Casino Control Commission Exclusion List: Found 0 possible matches",
      },
      "nvResult": {
        "nvCode": "0",
        "nvCount": 0,
        "nvData": "",
        "nvDetails": "Nevada Gaming Control Board (GBC) Excluded Persons List: Found 0 possible matches",
      },
      "ofacResult": {
        "ofacCode": "0",
        "ofacCount": 0,
        "ofacData": "",
        "ofacDetails": "Department of Treasury, Office of Foreign Assets Control (OFAC SDN/PLC): Found 0 possible matches",
      },
      "results": {
        "result": [
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Department of Treasury, Office of Foreign Assets Control (OFAC SDN/PLC): Found 0 possible matches",
            "type": "OFAC",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Health &amp; Human Services (HHS), Office of the Inspector General (OIG), Excluded Individuals and Entities (LEIE): Found 0 possible matches",
            "type": "HHS",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Politically Exposed Persons. (foreign diplomats): Found 0 possible matches",
            "type": "PEP",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Department of Commerce (DOC), Denied Persons List (DPL): Found 0 possible matches",
            "type": "DPL",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "General Services Administration (GSA), Excluded Parties List System (EPLS): Found 0 possible matches",
            "type": "EPLS",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Designated Foreign Terrorist Organizations: Found 0 possible matches",
            "type": "DFTO",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Foreign Sanctions Evaders (FSE) List: Found 0 possible matches",
            "type": "FSE",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "IRS FATCA GIIN List: Found 0 possible matches",
            "type": "GIIN",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "EU Sanctions List: Found 0 possible matches",
            "type": "EUS",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Arms Export Control Act List: Found 0 possible matches",
            "type": "DTC",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Foreign Financial Institutions Subj. 561/CAPTA List: Found 0 possible matches",
            "type": "FFI",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "IRS Exempt Organizations List: Found 0 possible matches",
            "type": "IEO",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Iranian Sanctions Act List: Found 0 possible matches",
            "type": "ISA",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Sectoral Sanctions Identifications List: Found 0 possible matches",
            "type": "SSI",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Unverified List: Found 0 possible matches",
            "type": "UVL",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Entity List: Found 0 possible matches",
            "type": "EAR",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Palestinian Legislative Council List: Found 0 possible matches",
            "type": "PLC",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Ukraine-Russia Related Sanctions List: Found 0 possible matches",
            "type": "UKE",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Iran-Syria Nonproliferation Act: Found 0 possible matches",
            "type": "NPS",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "United Nations Consolidated: Found 0 possible matches",
            "type": "UNCON",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Consolidated Sanctions List: Found 0 possible matches",
            "type": "TCON",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Administrative Sanctions: Found 0 possible matches",
            "type": "CFTCSIRT",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Reparations Sanctions: Found 0 possible matches",
            "type": "CFTCSIRTR",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Wanted: Found 0 possible matches",
            "type": "INT",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Consolidated Regulations: Found 0 possible matches",
            "type": "JLAWSOR",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Special Economic Measures Act: Found 0 possible matches",
            "type": "SEMA",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Freezing Assets of Corrupt Foreign Officials Act: Found 0 possible matches",
            "type": "FACFOA",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Most Wanted Terrorists: Found 0 possible matches",
            "type": "FBIMWT",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "White Collar Crimes: Found 0 possible matches",
            "type": "FBIWCC",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Additional Violent Crimes: Found 0 possible matches",
            "type": "FBIAVC",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Crimes Against Children: Found 0 possible matches",
            "type": "FBICAC",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Cyber Crimes: Found 0 possible matches",
            "type": "FBICC",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Criminal Enterprise Investigations: Found 0 possible matches",
            "type": "FBICEI",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Domestic Terrorism: Found 0 possible matches",
            "type": "FBIDT",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Seeking Information: Found 0 possible matches",
            "type": "FBISI",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Seeking Terror Information: Found 0 possible matches",
            "type": "FBISTI",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Top Ten Fugitives: Found 0 possible matches",
            "type": "FBITMW",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Violent Crimes - Murders: Found 0 possible matches",
            "type": "FBIVCM",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Nevada Gaming Control Board (GBC) Excluded Persons List: Found 0 possible matches",
            "type": "NV",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Mississippi Gaming Commission Exclusion List: Found 0 possible matches",
            "type": "MS",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Illinois Gaming Board Exclusion List: Found 0 possible matches",
            "type": "IL",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Missouri Gaming Commission Exclusion List: Found 0 possible matches",
            "type": "MO",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "New Jersey Casino Control Commission Exclusion List: Found 0 possible matches",
            "type": "NJ",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Michigan Gaming Control Board Exclusion List: Found 0 possible matches",
            "type": "MI",
          },
        ],
      },
    },
    "requestDetails": "Request Completed",
    "requestId": 1,
    "requestStatus": 1,
    "status": {
      "callsRemaining": "71",
      "status": "OK",
    },
    "tinnameResult": {
      "dmfCode": "0",
      "dmfData": "",
      "dmfDetails": "No Death Master File Match Found.",
      "einCode": "0",
      "einData": "",
      "einDetails": "No EIN Match found.",
      "giinCode": "-1",
      "giinData": "",
      "giinDetails": "No GIIN provided. GIIN lookup skipped.",
      "tinnameCode": 13,
      "tinnameDetails": "Invalid TIN Matching request",
    },
  },
  "success": true,
}
`;

exports[`TinCheck Validate Method Tests > Should report when tin lookup failed 1`] = `
{
  "data": {
    "didPerformTinCheck": false,
    "errorSummary": [
      "No TIN provided. TIN lookup skipped.",
    ],
    "isTinCheckIssuesFound": true,
    "tinCheckItemBreakdown": [],
  },
  "detailedResponse": {
    "addressResult": {
      "addressCode": "0",
      "addressDetails": "No USPS Match found.",
    },
    "listmatchResult": {
      "listsmatchCode": 17,
      "listsmatchDetails": "There was an error processing lists.",
      "results": null,
    },
    "requestDetails": "Request Completed",
    "requestId": 1,
    "requestStatus": 1,
    "status": {
      "callsRemaining": "76",
      "status": "OK",
    },
    "tinnameResult": {
      "dmfCode": "-1",
      "dmfData": "",
      "dmfDetails": "No TIN provided. DMF lookup skipped.",
      "einCode": "-1",
      "einData": "",
      "einDetails": "No TIN provided. EIN lookup skipped.",
      "giinCode": "-1",
      "giinData": "",
      "giinDetails": "No GIIN provided. GIIN lookup skipped.",
      "tinnameCode": -1,
      "tinnameDetails": "No TIN provided. TIN lookup skipped.",
    },
  },
  "success": true,
}
`;

exports[`TinCheck Validate Method Tests > should report successfully when lookup is successful 1`] = `
{
  "data": {
    "didPerformTinCheck": true,
    "errorSummary": [],
    "isTinCheckIssuesFound": false,
    "tinCheckItemBreakdown": [
      {
        "details": "Department of Treasury, Office of Foreign Assets Control (OFAC SDN/PLC): Found 0 possible matches",
        "isIssueFound": false,
        "type": "OFAC",
      },
      {
        "details": "Health &amp; Human Services (HHS), Office of the Inspector General (OIG), Excluded Individuals and Entities (LEIE): Found 0 possible matches",
        "isIssueFound": false,
        "type": "HHS",
      },
      {
        "details": "Politically Exposed Persons. (foreign diplomats): Found 0 possible matches",
        "isIssueFound": false,
        "type": "PEP",
      },
      {
        "details": "Department of Commerce (DOC), Denied Persons List (DPL): Found 0 possible matches",
        "isIssueFound": false,
        "type": "DPL",
      },
      {
        "details": "General Services Administration (GSA), Excluded Parties List System (EPLS): Found 0 possible matches",
        "isIssueFound": false,
        "type": "EPLS",
      },
      {
        "details": "Designated Foreign Terrorist Organizations: Found 0 possible matches",
        "isIssueFound": false,
        "type": "DFTO",
      },
      {
        "details": "Foreign Sanctions Evaders (FSE) List: Found 0 possible matches",
        "isIssueFound": false,
        "type": "FSE",
      },
      {
        "details": "IRS FATCA GIIN List: Found 0 possible matches",
        "isIssueFound": false,
        "type": "GIIN",
      },
      {
        "details": "EU Sanctions List: Found 0 possible matches",
        "isIssueFound": false,
        "type": "EUS",
      },
      {
        "details": "Arms Export Control Act List: Found 0 possible matches",
        "isIssueFound": false,
        "type": "DTC",
      },
      {
        "details": "Foreign Financial Institutions Subj. 561/CAPTA List: Found 0 possible matches",
        "isIssueFound": false,
        "type": "FFI",
      },
      {
        "details": "IRS Exempt Organizations List: Found 0 possible matches",
        "isIssueFound": false,
        "type": "IEO",
      },
      {
        "details": "Iranian Sanctions Act List: Found 0 possible matches",
        "isIssueFound": false,
        "type": "ISA",
      },
      {
        "details": "Sectoral Sanctions Identifications List: Found 0 possible matches",
        "isIssueFound": false,
        "type": "SSI",
      },
      {
        "details": "Unverified List: Found 0 possible matches",
        "isIssueFound": false,
        "type": "UVL",
      },
      {
        "details": "Entity List: Found 0 possible matches",
        "isIssueFound": false,
        "type": "EAR",
      },
      {
        "details": "Palestinian Legislative Council List: Found 0 possible matches",
        "isIssueFound": false,
        "type": "PLC",
      },
      {
        "details": "Ukraine-Russia Related Sanctions List: Found 0 possible matches",
        "isIssueFound": false,
        "type": "UKE",
      },
      {
        "details": "Iran-Syria Nonproliferation Act: Found 0 possible matches",
        "isIssueFound": false,
        "type": "NPS",
      },
      {
        "details": "United Nations Consolidated: Found 0 possible matches",
        "isIssueFound": false,
        "type": "UNCON",
      },
      {
        "details": "Consolidated Sanctions List: Found 0 possible matches",
        "isIssueFound": false,
        "type": "TCON",
      },
      {
        "details": "Administrative Sanctions: Found 0 possible matches",
        "isIssueFound": false,
        "type": "CFTCSIRT",
      },
      {
        "details": "Reparations Sanctions: Found 0 possible matches",
        "isIssueFound": false,
        "type": "CFTCSIRTR",
      },
      {
        "details": "Wanted: Found 0 possible matches",
        "isIssueFound": false,
        "type": "INT",
      },
      {
        "details": "Consolidated Regulations: Found 0 possible matches",
        "isIssueFound": false,
        "type": "JLAWSOR",
      },
      {
        "details": "Special Economic Measures Act: Found 0 possible matches",
        "isIssueFound": false,
        "type": "SEMA",
      },
      {
        "details": "Freezing Assets of Corrupt Foreign Officials Act: Found 0 possible matches",
        "isIssueFound": false,
        "type": "FACFOA",
      },
      {
        "details": "Most Wanted Terrorists: Found 0 possible matches",
        "isIssueFound": false,
        "type": "FBIMWT",
      },
      {
        "details": "White Collar Crimes: Found 0 possible matches",
        "isIssueFound": false,
        "type": "FBIWCC",
      },
      {
        "details": "Additional Violent Crimes: Found 0 possible matches",
        "isIssueFound": false,
        "type": "FBIAVC",
      },
      {
        "details": "Crimes Against Children: Found 0 possible matches",
        "isIssueFound": false,
        "type": "FBICAC",
      },
      {
        "details": "Cyber Crimes: Found 0 possible matches",
        "isIssueFound": false,
        "type": "FBICC",
      },
      {
        "details": "Criminal Enterprise Investigations: Found 0 possible matches",
        "isIssueFound": false,
        "type": "FBICEI",
      },
      {
        "details": "Domestic Terrorism: Found 0 possible matches",
        "isIssueFound": false,
        "type": "FBIDT",
      },
      {
        "details": "Seeking Information: Found 0 possible matches",
        "isIssueFound": false,
        "type": "FBISI",
      },
      {
        "details": "Seeking Terror Information: Found 0 possible matches",
        "isIssueFound": false,
        "type": "FBISTI",
      },
      {
        "details": "Top Ten Fugitives: Found 0 possible matches",
        "isIssueFound": false,
        "type": "FBITMW",
      },
      {
        "details": "Violent Crimes - Murders: Found 0 possible matches",
        "isIssueFound": false,
        "type": "FBIVCM",
      },
      {
        "details": "Nevada Gaming Control Board (GBC) Excluded Persons List: Found 0 possible matches",
        "isIssueFound": false,
        "type": "NV",
      },
      {
        "details": "Mississippi Gaming Commission Exclusion List: Found 0 possible matches",
        "isIssueFound": false,
        "type": "MS",
      },
      {
        "details": "Illinois Gaming Board Exclusion List: Found 0 possible matches",
        "isIssueFound": false,
        "type": "IL",
      },
      {
        "details": "Missouri Gaming Commission Exclusion List: Found 0 possible matches",
        "isIssueFound": false,
        "type": "MO",
      },
      {
        "details": "New Jersey Casino Control Commission Exclusion List: Found 0 possible matches",
        "isIssueFound": false,
        "type": "NJ",
      },
      {
        "details": "Michigan Gaming Control Board Exclusion List: Found 0 possible matches",
        "isIssueFound": false,
        "type": "MI",
      },
    ],
  },
  "detailedResponse": {
    "addressResult": {
      "addressCode": "0",
      "addressDetails": "No USPS Match found.",
    },
    "listmatchResult": {
      "ilResult": {
        "ilCode": "0",
        "ilCount": 0,
        "ilData": "",
        "ilDetails": "Illinois Gaming Board Exclusion List: Found 0 possible matches",
      },
      "listsmatchCode": 0,
      "listsmatchDetails": "No Lists Matches Found",
      "moResult": {
        "moCode": "0",
        "moCount": 0,
        "moData": "",
        "moDetails": "Missouri Gaming Commission Exclusion List: Found 0 possible matches",
      },
      "msResult": {
        "msCode": "0",
        "msCount": 0,
        "msData": "",
        "msDetails": "Mississippi Gaming Commission Exclusion List: Found 0 possible matches",
      },
      "njResult": {
        "njCode": "0",
        "njCount": 0,
        "njData": "",
        "njDetails": "New Jersey Casino Control Commission Exclusion List: Found 0 possible matches",
      },
      "nvResult": {
        "nvCode": "0",
        "nvCount": 0,
        "nvData": "",
        "nvDetails": "Nevada Gaming Control Board (GBC) Excluded Persons List: Found 0 possible matches",
      },
      "ofacResult": {
        "ofacCode": "0",
        "ofacCount": 0,
        "ofacData": "",
        "ofacDetails": "Department of Treasury, Office of Foreign Assets Control (OFAC SDN/PLC): Found 0 possible matches",
      },
      "results": {
        "result": [
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Department of Treasury, Office of Foreign Assets Control (OFAC SDN/PLC): Found 0 possible matches",
            "type": "OFAC",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Health &amp; Human Services (HHS), Office of the Inspector General (OIG), Excluded Individuals and Entities (LEIE): Found 0 possible matches",
            "type": "HHS",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Politically Exposed Persons. (foreign diplomats): Found 0 possible matches",
            "type": "PEP",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Department of Commerce (DOC), Denied Persons List (DPL): Found 0 possible matches",
            "type": "DPL",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "General Services Administration (GSA), Excluded Parties List System (EPLS): Found 0 possible matches",
            "type": "EPLS",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Designated Foreign Terrorist Organizations: Found 0 possible matches",
            "type": "DFTO",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Foreign Sanctions Evaders (FSE) List: Found 0 possible matches",
            "type": "FSE",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "IRS FATCA GIIN List: Found 0 possible matches",
            "type": "GIIN",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "EU Sanctions List: Found 0 possible matches",
            "type": "EUS",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Arms Export Control Act List: Found 0 possible matches",
            "type": "DTC",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Foreign Financial Institutions Subj. 561/CAPTA List: Found 0 possible matches",
            "type": "FFI",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "IRS Exempt Organizations List: Found 0 possible matches",
            "type": "IEO",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Iranian Sanctions Act List: Found 0 possible matches",
            "type": "ISA",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Sectoral Sanctions Identifications List: Found 0 possible matches",
            "type": "SSI",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Unverified List: Found 0 possible matches",
            "type": "UVL",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Entity List: Found 0 possible matches",
            "type": "EAR",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Palestinian Legislative Council List: Found 0 possible matches",
            "type": "PLC",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Ukraine-Russia Related Sanctions List: Found 0 possible matches",
            "type": "UKE",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Iran-Syria Nonproliferation Act: Found 0 possible matches",
            "type": "NPS",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "United Nations Consolidated: Found 0 possible matches",
            "type": "UNCON",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Consolidated Sanctions List: Found 0 possible matches",
            "type": "TCON",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Administrative Sanctions: Found 0 possible matches",
            "type": "CFTCSIRT",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Reparations Sanctions: Found 0 possible matches",
            "type": "CFTCSIRTR",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Wanted: Found 0 possible matches",
            "type": "INT",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Consolidated Regulations: Found 0 possible matches",
            "type": "JLAWSOR",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Special Economic Measures Act: Found 0 possible matches",
            "type": "SEMA",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Freezing Assets of Corrupt Foreign Officials Act: Found 0 possible matches",
            "type": "FACFOA",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Most Wanted Terrorists: Found 0 possible matches",
            "type": "FBIMWT",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "White Collar Crimes: Found 0 possible matches",
            "type": "FBIWCC",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Additional Violent Crimes: Found 0 possible matches",
            "type": "FBIAVC",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Crimes Against Children: Found 0 possible matches",
            "type": "FBICAC",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Cyber Crimes: Found 0 possible matches",
            "type": "FBICC",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Criminal Enterprise Investigations: Found 0 possible matches",
            "type": "FBICEI",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Domestic Terrorism: Found 0 possible matches",
            "type": "FBIDT",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Seeking Information: Found 0 possible matches",
            "type": "FBISI",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Seeking Terror Information: Found 0 possible matches",
            "type": "FBISTI",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Top Ten Fugitives: Found 0 possible matches",
            "type": "FBITMW",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Violent Crimes - Murders: Found 0 possible matches",
            "type": "FBIVCM",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Nevada Gaming Control Board (GBC) Excluded Persons List: Found 0 possible matches",
            "type": "NV",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Mississippi Gaming Commission Exclusion List: Found 0 possible matches",
            "type": "MS",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Illinois Gaming Board Exclusion List: Found 0 possible matches",
            "type": "IL",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Missouri Gaming Commission Exclusion List: Found 0 possible matches",
            "type": "MO",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "New Jersey Casino Control Commission Exclusion List: Found 0 possible matches",
            "type": "NJ",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Michigan Gaming Control Board Exclusion List: Found 0 possible matches",
            "type": "MI",
          },
        ],
      },
    },
    "requestDetails": "Request Completed",
    "requestId": 1,
    "requestStatus": 1,
    "status": {
      "callsRemaining": "80",
      "status": "OK",
    },
    "tinnameResult": {
      "dmfCode": "0",
      "dmfData": "",
      "dmfDetails": "No Death Master File Match Found.",
      "einCode": "1",
      "einData": "",
      "einDetails": "EIN Possible Match found.",
      "giinCode": "-1",
      "giinData": "",
      "giinDetails": "No GIIN provided. GIIN lookup skipped.",
      "tinnameCode": 7,
      "tinnameDetails": "IRS Match found. TIN and Name combination matches IRS EIN records",
    },
  },
  "success": true,
}
`;

exports[`TinCheck Validate Method Tests > should report successfully when lookup is successful but issues found 1`] = `
{
  "data": {
    "didPerformTinCheck": true,
    "errorSummary": [
      "Department of Treasury, Office of Foreign Assets Control (OFAC SDN/PLC): Found a possible match",
    ],
    "isTinCheckIssuesFound": true,
    "tinCheckItemBreakdown": [
      {
        "details": "Health &amp; Human Services (HHS), Office of the Inspector General (OIG), Excluded Individuals and Entities (LEIE): Found 0 possible matches",
        "isIssueFound": false,
        "type": "HHS",
      },
      {
        "details": "Politically Exposed Persons. (foreign diplomats): Found 0 possible matches",
        "isIssueFound": false,
        "type": "PEP",
      },
      {
        "details": "Department of Commerce (DOC), Denied Persons List (DPL): Found 0 possible matches",
        "isIssueFound": false,
        "type": "DPL",
      },
      {
        "details": "General Services Administration (GSA), Excluded Parties List System (EPLS): Found 0 possible matches",
        "isIssueFound": false,
        "type": "EPLS",
      },
      {
        "details": "Designated Foreign Terrorist Organizations: Found 0 possible matches",
        "isIssueFound": false,
        "type": "DFTO",
      },
      {
        "details": "Foreign Sanctions Evaders (FSE) List: Found 0 possible matches",
        "isIssueFound": false,
        "type": "FSE",
      },
      {
        "details": "IRS FATCA GIIN List: Found 0 possible matches",
        "isIssueFound": false,
        "type": "GIIN",
      },
      {
        "details": "EU Sanctions List: Found 0 possible matches",
        "isIssueFound": false,
        "type": "EUS",
      },
      {
        "details": "Arms Export Control Act List: Found 0 possible matches",
        "isIssueFound": false,
        "type": "DTC",
      },
      {
        "details": "Foreign Financial Institutions Subj. 561/CAPTA List: Found 0 possible matches",
        "isIssueFound": false,
        "type": "FFI",
      },
      {
        "details": "IRS Exempt Organizations List: Found 0 possible matches",
        "isIssueFound": false,
        "type": "IEO",
      },
      {
        "details": "Iranian Sanctions Act List: Found 0 possible matches",
        "isIssueFound": false,
        "type": "ISA",
      },
      {
        "details": "Sectoral Sanctions Identifications List: Found 0 possible matches",
        "isIssueFound": false,
        "type": "SSI",
      },
      {
        "details": "Unverified List: Found 0 possible matches",
        "isIssueFound": false,
        "type": "UVL",
      },
      {
        "details": "Entity List: Found 0 possible matches",
        "isIssueFound": false,
        "type": "EAR",
      },
      {
        "details": "Palestinian Legislative Council List: Found 0 possible matches",
        "isIssueFound": false,
        "type": "PLC",
      },
      {
        "details": "Ukraine-Russia Related Sanctions List: Found 0 possible matches",
        "isIssueFound": false,
        "type": "UKE",
      },
      {
        "details": "Iran-Syria Nonproliferation Act: Found 0 possible matches",
        "isIssueFound": false,
        "type": "NPS",
      },
      {
        "details": "United Nations Consolidated: Found 0 possible matches",
        "isIssueFound": false,
        "type": "UNCON",
      },
      {
        "details": "Consolidated Sanctions List: Found 0 possible matches",
        "isIssueFound": false,
        "type": "TCON",
      },
      {
        "details": "Administrative Sanctions: Found 0 possible matches",
        "isIssueFound": false,
        "type": "CFTCSIRT",
      },
      {
        "details": "Reparations Sanctions: Found 0 possible matches",
        "isIssueFound": false,
        "type": "CFTCSIRTR",
      },
      {
        "details": "Wanted: Found 0 possible matches",
        "isIssueFound": false,
        "type": "INT",
      },
      {
        "details": "Consolidated Regulations: Found 0 possible matches",
        "isIssueFound": false,
        "type": "JLAWSOR",
      },
      {
        "details": "Special Economic Measures Act: Found 0 possible matches",
        "isIssueFound": false,
        "type": "SEMA",
      },
      {
        "details": "Freezing Assets of Corrupt Foreign Officials Act: Found 0 possible matches",
        "isIssueFound": false,
        "type": "FACFOA",
      },
      {
        "details": "Most Wanted Terrorists: Found 0 possible matches",
        "isIssueFound": false,
        "type": "FBIMWT",
      },
      {
        "details": "White Collar Crimes: Found 0 possible matches",
        "isIssueFound": false,
        "type": "FBIWCC",
      },
      {
        "details": "Additional Violent Crimes: Found 0 possible matches",
        "isIssueFound": false,
        "type": "FBIAVC",
      },
      {
        "details": "Crimes Against Children: Found 0 possible matches",
        "isIssueFound": false,
        "type": "FBICAC",
      },
      {
        "details": "Cyber Crimes: Found 0 possible matches",
        "isIssueFound": false,
        "type": "FBICC",
      },
      {
        "details": "Criminal Enterprise Investigations: Found 0 possible matches",
        "isIssueFound": false,
        "type": "FBICEI",
      },
      {
        "details": "Domestic Terrorism: Found 0 possible matches",
        "isIssueFound": false,
        "type": "FBIDT",
      },
      {
        "details": "Seeking Information: Found 0 possible matches",
        "isIssueFound": false,
        "type": "FBISI",
      },
      {
        "details": "Seeking Terror Information: Found 0 possible matches",
        "isIssueFound": false,
        "type": "FBISTI",
      },
      {
        "details": "Top Ten Fugitives: Found 0 possible matches",
        "isIssueFound": false,
        "type": "FBITMW",
      },
      {
        "details": "Violent Crimes - Murders: Found 0 possible matches",
        "isIssueFound": false,
        "type": "FBIVCM",
      },
      {
        "details": "Nevada Gaming Control Board (GBC) Excluded Persons List: Found 0 possible matches",
        "isIssueFound": false,
        "type": "NV",
      },
      {
        "details": "Mississippi Gaming Commission Exclusion List: Found 0 possible matches",
        "isIssueFound": false,
        "type": "MS",
      },
      {
        "details": "Illinois Gaming Board Exclusion List: Found 0 possible matches",
        "isIssueFound": false,
        "type": "IL",
      },
      {
        "details": "Missouri Gaming Commission Exclusion List: Found 0 possible matches",
        "isIssueFound": false,
        "type": "MO",
      },
      {
        "details": "New Jersey Casino Control Commission Exclusion List: Found 0 possible matches",
        "isIssueFound": false,
        "type": "NJ",
      },
      {
        "details": "Michigan Gaming Control Board Exclusion List: Found 0 possible matches",
        "isIssueFound": false,
        "type": "MI",
      },
      {
        "details": "Department of Treasury, Office of Foreign Assets Control (OFAC SDN/PLC): Found a possible match",
        "isIssueFound": true,
        "type": "OFAC",
      },
    ],
  },
  "detailedResponse": {
    "addressResult": {
      "addressCode": "0",
      "addressDetails": "No USPS Match found.",
    },
    "listmatchResult": {
      "ilResult": {
        "ilCode": "0",
        "ilCount": 0,
        "ilData": "",
        "ilDetails": "Illinois Gaming Board Exclusion List: Found 0 possible matches",
      },
      "listsmatchCode": 1,
      "listsmatchDetails": "Possible Lists Matches Found",
      "moResult": {
        "moCode": "0",
        "moCount": 0,
        "moData": "",
        "moDetails": "Missouri Gaming Commission Exclusion List: Found 0 possible matches",
      },
      "msResult": {
        "msCode": "0",
        "msCount": 0,
        "msData": "",
        "msDetails": "Mississippi Gaming Commission Exclusion List: Found 0 possible matches",
      },
      "njResult": {
        "njCode": "0",
        "njCount": 0,
        "njData": "",
        "njDetails": "New Jersey Casino Control Commission Exclusion List: Found 0 possible matches",
      },
      "nvResult": {
        "nvCode": "0",
        "nvCount": 0,
        "nvData": "",
        "nvDetails": "Nevada Gaming Control Board (GBC) Excluded Persons List: Found 0 possible matches",
      },
      "ofacResult": {
        "ofacCode": "1",
        "ofacCount": 1,
        "ofacData": "<NewDataSet><OFAC_DATA><Id>1</Id>
<SearchName>BAD CORP</SearchName>
<SysID>1</SysID>
<Name>BAD CORP</Name>
<Type></Type>
<Program>SDNTK</Program>
<Remarks>US FEIN 65-0842701; Business Registration Document # P9800004558 (United States).</Remarks>
<Address></Address>
<AKA></AKA>
<DisplayName>BAD CORP</DisplayName>
<AKAList>I A C INTERNATIONAL INC | INTERNATIONAL AIRLINE CONSULTING |</AKAList>
<MatchScore>100</MatchScore>
</OFAC_DATA>
</NewDataSet>",
        "ofacDetails": "Department of Treasury, Office of Foreign Assets Control (OFAC SDN/PLC): Found a possible match",
      },
      "results": {
        "result": [
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Health &amp; Human Services (HHS), Office of the Inspector General (OIG), Excluded Individuals and Entities (LEIE): Found 0 possible matches",
            "type": "HHS",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Politically Exposed Persons. (foreign diplomats): Found 0 possible matches",
            "type": "PEP",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Department of Commerce (DOC), Denied Persons List (DPL): Found 0 possible matches",
            "type": "DPL",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "General Services Administration (GSA), Excluded Parties List System (EPLS): Found 0 possible matches",
            "type": "EPLS",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Designated Foreign Terrorist Organizations: Found 0 possible matches",
            "type": "DFTO",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Foreign Sanctions Evaders (FSE) List: Found 0 possible matches",
            "type": "FSE",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "IRS FATCA GIIN List: Found 0 possible matches",
            "type": "GIIN",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "EU Sanctions List: Found 0 possible matches",
            "type": "EUS",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Arms Export Control Act List: Found 0 possible matches",
            "type": "DTC",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Foreign Financial Institutions Subj. 561/CAPTA List: Found 0 possible matches",
            "type": "FFI",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "IRS Exempt Organizations List: Found 0 possible matches",
            "type": "IEO",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Iranian Sanctions Act List: Found 0 possible matches",
            "type": "ISA",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Sectoral Sanctions Identifications List: Found 0 possible matches",
            "type": "SSI",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Unverified List: Found 0 possible matches",
            "type": "UVL",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Entity List: Found 0 possible matches",
            "type": "EAR",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Palestinian Legislative Council List: Found 0 possible matches",
            "type": "PLC",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Ukraine-Russia Related Sanctions List: Found 0 possible matches",
            "type": "UKE",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Iran-Syria Nonproliferation Act: Found 0 possible matches",
            "type": "NPS",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "United Nations Consolidated: Found 0 possible matches",
            "type": "UNCON",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Consolidated Sanctions List: Found 0 possible matches",
            "type": "TCON",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Administrative Sanctions: Found 0 possible matches",
            "type": "CFTCSIRT",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Reparations Sanctions: Found 0 possible matches",
            "type": "CFTCSIRTR",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Wanted: Found 0 possible matches",
            "type": "INT",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Consolidated Regulations: Found 0 possible matches",
            "type": "JLAWSOR",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Special Economic Measures Act: Found 0 possible matches",
            "type": "SEMA",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Freezing Assets of Corrupt Foreign Officials Act: Found 0 possible matches",
            "type": "FACFOA",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Most Wanted Terrorists: Found 0 possible matches",
            "type": "FBIMWT",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "White Collar Crimes: Found 0 possible matches",
            "type": "FBIWCC",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Additional Violent Crimes: Found 0 possible matches",
            "type": "FBIAVC",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Crimes Against Children: Found 0 possible matches",
            "type": "FBICAC",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Cyber Crimes: Found 0 possible matches",
            "type": "FBICC",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Criminal Enterprise Investigations: Found 0 possible matches",
            "type": "FBICEI",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Domestic Terrorism: Found 0 possible matches",
            "type": "FBIDT",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Seeking Information: Found 0 possible matches",
            "type": "FBISI",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Seeking Terror Information: Found 0 possible matches",
            "type": "FBISTI",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Top Ten Fugitives: Found 0 possible matches",
            "type": "FBITMW",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Violent Crimes - Murders: Found 0 possible matches",
            "type": "FBIVCM",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Nevada Gaming Control Board (GBC) Excluded Persons List: Found 0 possible matches",
            "type": "NV",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Mississippi Gaming Commission Exclusion List: Found 0 possible matches",
            "type": "MS",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Illinois Gaming Board Exclusion List: Found 0 possible matches",
            "type": "IL",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Missouri Gaming Commission Exclusion List: Found 0 possible matches",
            "type": "MO",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "New Jersey Casino Control Commission Exclusion List: Found 0 possible matches",
            "type": "NJ",
          },
          {
            "code": "0",
            "count": 0,
            "data": "",
            "details": "Michigan Gaming Control Board Exclusion List: Found 0 possible matches",
            "type": "MI",
          },
          {
            "code": "1",
            "count": 1,
            "data": "<NewDataSet><OFAC_DATA><Id>1</Id>
<SearchName>BAD CORP</SearchName>
<SysID>1</SysID>
<Name>BAD CORP</Name>
<Type></Type>
<Program>SDNTK</Program>
<Remarks>US FEIN 65-0842701; Business Registration Document # P9800004558 (United States).</Remarks>
<Address></Address>
<AKA></AKA>
<DisplayName>BAD CORP</DisplayName>
<AKAList>I A C INTERNATIONAL INC | INTERNATIONAL AIRLINE CONSULTING |</AKAList>
<MatchScore>100</MatchScore>
</OFAC_DATA>
</NewDataSet>",
            "details": "Department of Treasury, Office of Foreign Assets Control (OFAC SDN/PLC): Found a possible match",
            "type": "OFAC",
          },
        ],
      },
    },
    "requestDetails": "Request Completed",
    "requestId": 1,
    "requestStatus": 1,
    "status": {
      "callsRemaining": "77",
      "status": "OK",
    },
    "tinnameResult": {
      "dmfCode": "0",
      "dmfData": "",
      "dmfDetails": "No Death Master File Match Found.",
      "einCode": "1",
      "einData": "BAD CORP",
      "einDetails": "EIN Possible Match found.",
      "giinCode": "-1",
      "giinData": "",
      "giinDetails": "No GIIN provided. GIIN lookup skipped.",
      "tinnameCode": 7,
      "tinnameDetails": "IRS Match found. TIN and Name combination matches IRS EIN records",
    },
  },
  "success": true,
}
`;
